lint, remove DRAFT from title

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – April 2022
+# Decred Journal – April 2022
 
 ![abstract art](../img/202204.1.github.png)
 
@@ -407,7 +407,7 @@ In April, the JUNO community voted to [confiscate](https://www.coindesk.com/laye
 
 The Ronin Bridge, associated with Axie Infinity play to earn game, was [hacked](https://cointelegraph.com/news/the-aftermath-of-axie-infinity-s-650m-ronin-bridge-hack) for $600M in March, when an attacker gained access to the private keys of 4 validators run by Sky Mavis (game creators) and one by "Axie DAO", and this was enough for them to take control and steal the funds. It [seems](https://twitter.com/ericgoldenx/status/1508844665881116674) the attackers also tried to profit on their attack by shorting the RON and AXS tokens, but because nobody noticed the missing funds for a week the attacker's short position got liquidated before the news broke. In April the Lazarus Group in North Korea was [revealed](https://twitter.com/chainalysis/status/1514645221027594245) by Chainalysis to be the beneficiary of the hack.
 
-Yuga Labs have been busy in 2022 - [acquiring](https://techcrunch.com/2022/03/11/bored-apes-maker-yuga-labs-acquires-cryptopunks-nft-collection/) the rights to Cryptopunks NFTs and making these match BAYC terms of use and [launching](https://nftnow.com/news/bayc-official-apecoin-token-launch/) the APE token to serve as a currency for their ecosystem in March, then  [issuing](https://www.coindesk.com/business/2022/05/01/bayc-team-raises-285m-with-otherside-nfts-clogs-ethereum/) deeds to land in the BAYC metaverse (Otherside) in April. The Otherside deeds launch was successful in raising $285M for Yuga Labs, but it was widely [criticised](https://decrypt.co/99256/bored-ape-creators-slammed-nightmare-ethereum-nft-land-drop) for a poor launch mode and implementation which saw users spending $180M in ETH fees in a gas price auction on poorly optimised smart contracts.
+Yuga Labs have been busy in 2022 - [acquiring](https://techcrunch.com/2022/03/11/bored-apes-maker-yuga-labs-acquires-cryptopunks-nft-collection/) the rights to Cryptopunks NFTs and making these match BAYC terms of use and [launching](https://nftnow.com/news/bayc-official-apecoin-token-launch/) the APE token to serve as a currency for their ecosystem in March, then [issuing](https://www.coindesk.com/business/2022/05/01/bayc-team-raises-285m-with-otherside-nfts-clogs-ethereum/) deeds to land in the BAYC metaverse (Otherside) in April. The Otherside deeds launch was successful in raising $285M for Yuga Labs, but it was widely [criticised](https://decrypt.co/99256/bored-ape-creators-slammed-nightmare-ethereum-nft-land-drop) for a poor launch mode and implementation which saw users spending $180M in ETH fees in a gas price auction on poorly optimised smart contracts.
 
 Cryptocurrency has featured in a number of ways in the conflict between Russia and Ukraine, with Ukraine [already](https://fortune.com/2022/01/31/ukraine-crypto-superpower-russia-crisis-investors-bitcoin/) having quite a developed crypto policy and stance before the Russian invasion. In the early days of the war the Ukrainian government [called for](https://www.ft.com/content/f3778d00-4c9b-40bb-b91c-84b60dd09698) and received crypto donations, and one month in had received over $100M in donations this way. However, by April the Ukrainian government's tone towards crypto had [shifted](https://fortune.com/2022/04/22/ukraine-government-banning-crypto-purchases-with-national-currency/) and the prospect of capital outflows weakening the national currency led the government to ban the purchase of crypto with the local currency, and limit purchases with foreign currencies to $3,300/month.
 
