final read tweaks

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -4,11 +4,13 @@
 
 _Image: Objective Constructs by @saender_
 
-DJ is back! April's highlights:
+DJ is back! This issue covers April news, with a few exceptions.
 
-- Version 1.7.2 of the Decred node and wallet software was released on May 11, it fixes some bugs and adds the treasury spend voting feature for Decrediton users.
+Recent highlights:
+
 - The four consensus changes DCP0007-DCP0010 were all approved by stakeholder voting with almost unanimous support (~99.7%) in April, and all have activated on May 8 so any nodes running old versions will have been forked off the network.
 - In March, the majority of the funds held in the old treasury address, over 610,000 DCR, was transferred into the new treasury which requires stakeholder approval of spends.
+- Version 1.7.2 of the Decred node and wallet software was released on May 11, it fixes some bugs and adds the treasury spend voting feature for Decrediton users.
 - So far in 2022 there have been four Politeia proposals published, all approved with 96%+ support - funding has been extended for Politeia and DCRDEX development, along with video production and the @StakeShuffle\_ Twitter bot.
 
 Contents:
@@ -44,7 +46,7 @@ _dcrd is a full node implementation that powers Decred's peer-to-peer network ar
 
 More progress made towards the [`primitives`](https://github.com/decred/dcrd/issues/2786) module:
 
-- Implemented a [subsidy cache](https://github.com/decred/dcrd/pull/2920) with functions to calculate subsidies for proof-of-work, votes, and the treasury. Also includes a full suite of tests and benchmarks.
+- Implemented a [subsidy cache](https://github.com/decred/dcrd/pull/2920) with functions to calculate subsidies for Proof of Work, votes, and the treasury. Also includes a full suite of tests and benchmarks.
 
 <a id="decrediton" />
 
@@ -90,13 +92,13 @@ _RTFM without leaving Decrediton!_
 
 _Politeia is Decred's proposal system. It is used to request funding from the Decred treasury._
 
-Backend changes:
+Backend, merged:
 
 - Fixed [two](https://github.com/decred/politeia/pull/1633) [bugs](https://github.com/decred/politeia/pull/1635) in migration code (did not affect normal operation of Politeia).
 
-Backend in progress:
+Backend, in progress:
 
-- [Importing legacy proposals](https://github.com/decred/politeia/issues/1425) into the new Politeia database. A new tool to [convert](https://github.com/decred/politeia/pull/1631) legacy data into the new format has been merged in March. Up next is the [import](https://github.com/decred/politeia/pull/1632) tool for loading converted data into the production Politeia database.
+- [Importing legacy proposals](https://github.com/decred/politeia/issues/1425) into the new Politeia database. A new tool to [convert](https://github.com/decred/politeia/pull/1631) legacy data into the new format is complete. Up next is the [import](https://github.com/decred/politeia/pull/1632) tool for loading converted data into the production Politeia database.
 
 User-facing UI changes:
 
@@ -110,7 +112,7 @@ Developer UI changes:
 
 - Implemented the new [layout system](https://github.com/decred/politeiagui/pull/2748) on the home page. Layout primitives like Column and Row are now reused from the pi-ui library.
 - Added common [modal component](https://github.com/decred/politeiagui/pull/2749).
-- Added [`plugins`](https://github.com/decred/politeiagui/pull/2754) flag to the `newapp` CLI tool for generating new Politeia-like apps.
+- Added [a flag to configure plugins](https://github.com/decred/politeiagui/pull/2754) when generating Politeia-like apps with the `newapp` CLI tool.
 - New features and fixes in the shared [pi-ui library](https://github.com/decred/pi-ui) (default theming, button tooltips, layout primitivs, etc.).
 
 <a id="cspp" />
@@ -202,7 +204,7 @@ Merged in April:
 - Prevent usage of the default account in [StakeShuffle](https://github.com/planetdecred/godcr/pull/904).
 - Fixed possible [address reuse](https://github.com/planetdecred/godcr/pull/899) on Receive page. Also, accessing Send and Receive pages will be blocked until sync is complete.
 - ~14 bug fixes, ~10 UX tweaks, code refactoring.
-- The base [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) updated to bring new features and fixes to Android, iOS and GoDCR.
+- The base [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) updated to bring new features and fixes to Android, iOS and GoDCR wallets.
 
 In progress:
 
@@ -252,9 +254,9 @@ A [proposal](https://proposals.decred.org/record/1a290d8) to continue with phase
 
 The [proposal](https://proposals.decred.org/record/3326c82) to continue phase 3 of DCRDEX development with $370,000 was approved in January with 97% support and 57% ticket turnout.
 
-All of the consensus changes deployed as part of the v1.7 release ([DCP-7](https://github.com/decred/dcps/blob/master/dcp-0007/dcp-0007.mediawiki), [DCP-8](https://github.com/decred/dcps/blob/master/dcp-0008/dcp-0008.mediawiki), [DCP-9](https://github.com/decred/dcps/blob/master/dcp-0009/dcp-0009.mediawiki), [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki)) were approved by voters with very similar voting outcomes: 99.9% approval of the 60% of tickets that voted (as opposed to abstaining, which ~40% did), there were just 61 votes against the [subsidy split change](https://proposals.decred.org/record/427e1d4) (vs 23,664 Yes votes). Considering the opposition to this subsidy split proposal which was voiced in some quarters, the outcome suggests that the complaining parties either didn't have (m)any tickets or chose not to vote No with them for some reason.
+All of the consensus changes deployed as part of the v1.7 release were approved by voters with very similar voting outcomes: 99.9% approval of the 60% of tickets that voted (as opposed to abstaining, which ~40% did), there were just 61 votes against the [subsidy split change](https://proposals.decred.org/record/427e1d4) (vs 23,664 Yes votes). Considering the opposition to this subsidy split proposal which was voiced in some quarters, the outcome suggests that the complaining parties either didn't have (m)any tickets or chose not to vote No with them for some reason.
 
-The changes activated on May 8, so along with the new subsidy split there are automatic ticket revocations, and explicit version upgrades.
+The changes activated on May 8, so along with the new subsidy split ([DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki)) there are fixed treasury spend policy ([DCP-7](https://github.com/decred/dcps/blob/master/dcp-0007/dcp-0007.mediawiki)), explicit version upgrades ([DCP-8](https://github.com/decred/dcps/blob/master/dcp-0008/dcp-0008.mediawiki)), and automatic ticket revocations ([DCP-9](https://github.com/decred/dcps/blob/master/dcp-0009/dcp-0009.mediawiki)).
 
 
 ## Network
@@ -277,11 +279,11 @@ _We're just staking. A bit more again. Nothing to see here!_
 
 **VSP**: On May 10, ~6,780 live tickets were managed by 15 [listed](https://decred.org/vsp/) vspd servers, or 16.6% of the ticket pool. This is a small bump by ~230 tickets or +0.4% of the ticket pool, compared to our last snapshot on Jan 2.
 
-Legacy (dcrstakepool) tickets can no longer be voted since May 8 when the chain forked to the new rules. On May 10, the 7 listed and 1 unlisted legacy VSPs collectively reported 125 tickets but this figure is outdated. 5 of these VSPs have stopped voting between May 2021 and Feb 2022. The remaining 3 that voted till the very end had 27 live tickets on May 8. coinmine.pl, decredbrasil.com, and stakey.net showed to be the most hardcore.
+Legacy (dcrstakepool) tickets can no longer be voted since May 8 when the chain forked to the new rules. On May 10, the 7 listed and 1 unlisted legacy VSPs collectively reported 125 tickets but this figure is outdated. 5 of these VSPs have stopped voting between May 2021 and Feb 2022. The 3 remaining VSPs to operate till the very end had 27 live tickets on May 8. coinmine.pl, decredbrasil.com, and stakey.net showed to be the most hardcore.
 
 **Nodes**: Throughout April there were around 175 reachable nodes according to [PD Analytics](https://analytics.planetdecred.org/nodes).
 
-Node versions as of May 10 [snapshot](https://nodes.jholdstock.uk/user_agents) 187 total: v1.7.1 - 49%, v1.7.0 - 17%, v1.7.0 dev builds - 9%, v1.6.2 - 5%, v1.8.0 dev builds - 4%, v1.6.0 - 2%, v1.7.2 - 2%, v1.5.2 - 2%, other - 7%.
+Node versions as of May 10 [snapshot](https://nodes.jholdstock.uk/user_agents) (187 total, dcrd only): v1.7.1 - 49%, v1.7.0 - 17%, v1.7.0 dev builds - 9%, v1.6.2 - 5%, v1.8.0 dev builds - 4%, v1.6.0 - 2%, v1.7.2 - 2%, v1.5.2 - 2%, other - 7%.
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 57.9%-59.3%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=jzuht6o0-l33oao00&bin=day&axis=time) varied between 290-450K DCR.
 
@@ -314,13 +316,13 @@ Secured the following news articles:
 
 **Attended:**
 
-- @Exitus attended a [cryptocurrency meetup](https://twitter.com/exitusdcr/status/1506118577035825157) at the Hashhouse in Medellin, Colombia on March 21. There he informed attendees about Decred and its unique features.
-- [Insaf Nori](https://twitter.com/in_insaf/status/1506976446044114944) (@arij) was invited to talk about [Blockchain Technology](https://decredcommunity.github.io/events/index/20220326.1) and Decred Technology at the half-day training organized for the members of AEFDS Deroua.
+- @Exitus attended a [cryptocurrency meetup](https://twitter.com/exitusdcr/status/1506118577035825157) at the Hashhouse in Medellin, Colombia. There he informed attendees about Decred and its unique features.
+- [Insaf Nori](https://twitter.com/in_insaf/status/1506976446044114944) (@arij) was invited to talk about [Blockchain Technology](https://decredcommunity.github.io/events/index/20220326.1) and Decred Technology at the half-day training organized for the members of AEFDS Deroua, Morocco.
 
 
 ## Media
 
-- [@Applesaucesome](https://twitter.com/applesaucesome1/status/1517024462222336000) has written a cloud-based Decred [full-node tutorial](https://medium.com/@applesaucesome.dcr/decred-full-node-on-digital-ocean-92b904922291) using Digital Ocean.
+[@Applesaucesome](https://twitter.com/applesaucesome1/status/1517024462222336000) has written a cloud-based Decred [full-node tutorial](https://medium.com/@applesaucesome.dcr/decred-full-node-on-digital-ocean-92b904922291) using Digital Ocean.
 
 > **Why run a full node you might ask?**
 > 
@@ -328,7 +330,7 @@ Secured the following news articles:
 
 There are also [Raspberry Pi tutorials](https://www.youtube.com/watch?v=B-5O_GBcbV0) available.
 
-- Meet [decredsociety.com](https://www.decredsociety.com/) - a new website dedicated to Decred related ideas, news, and other aspects by @phoenixgreen. @Applesaucesome will also be posting technicals and other information related to Decred's markets.
+Meet [decredsociety.com](https://www.decredsociety.com/) - a new website dedicated to Decred related ideas, news, and other aspects by @phoenixgreen. @Applesaucesome will also be posting technicals and other information related to Decred's markets.
 
 **Selected articles:**
 
