--- a/journal/202204.md
+++ b/journal/202204.md
@@ -233,7 +233,9 @@ Community stats as of May 2 (compared against statistics from [December Journal]
 - [Matrix](https://chat.decred.org/) #general users: 662 (+63, +16/mo)
 - [Discord](https://discord.gg/GJ2GXfz) users: 2,293 (+118, +30/mo)
 - [Telegram](https://t.me/Decred) users: 2,828 (-332, -83/mo)
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,639 (-1), views: 214K (+14K, +3.4K/mo)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,639 (-1), views: 207K (+7K, +1.8K/mo) \*
+
+_* corrected from "214K (+14K, +3.4K/mo)" on 2022-05-21_
 
 
 ## Governance
