--- a/journal/202205.md
+++ b/journal/202205.md
@@ -57,14 +57,9 @@ _dcrd is a full node implementation that powers Decred's peer-to-peer network ar
 
 { _Check https://github.com/decred/dcrd/commits/master ._}
 
-- {}
-
-<a id="dcrwallet" />
-
-**[dcrwallet](https://github.com/decred/dcrwallet)**
-
-_dcrwallet is a wallet server used by command-line and graphical wallet applications._
-
+- 1.7 release [updated](https://github.com/decred/dcrd/pull/2935) to use the latest version of the 'blockchain' module and [bumped for 1.7.2](https://github.com/decred/dcrd/pull/2936).
+- Header proof logic has been [consolidated](https://github.com/decred/dcrd/pull/2937), resulting in the p2p and rpcserver handlers no longer needing to understand anything about the proofs. 
+- Implemented header [proof storage](https://github.com/decred/dcrd/pull/2938) This modifies the chain logic to create and store the individual commitment hashes covered by the commitment root field of the header of each block, adds code to migrate the database to retroactively create and store entries for all applicable historical blocks, and updates the code that generates inclusion proofs to use the stored data instead so that it will continue to work properly when new header commitments are added without further modification.
 { _Check https://github.com/decred/dcrwallet/commits/master ._}
 
 - {}
