Decredition intial commits

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -72,7 +72,15 @@ _Decrediton is a full-featured desktop wallet app with integrated voting, StakeS
 
 { _Check https://github.com/decred/decrediton/commits/master ._}
 
-- {}
+- Electron(The framework Decredtion is built on) has been [bumped to v17.4.2.](https://github.com/decred/decrediton/pull/3765) This fixes an issue that caused dcrwallet/dcrd to not be able to be launch on macOS 10.15 (Catalina)
+- Fixes made to info [modal columns](https://github.com/decred/decrediton/pull/3767) and justification. The privacy tab now displays "Stakeshuffle++" inside of "Coin Mixer".
+- The Decred Stakeshuffle++ mixing server now uses [constants](https://github.com/decred/decrediton/pull/3768) instead of magics.
+- Ticket History [QR Code](https://github.com/decred/decrediton/pull/3764) button fixed.
+- Fixes to [1.7.2 UI issues](https://github.com/decred/decrediton/pull/3760) - A typo in the Staking infographic has been fixed, and Vote Transaction Agenda Choice colors will no longer move when user scrolls.
+- Fixed the [loading more](https://github.com/decred/decrediton/pull/3756) tickets issue.
+- Improved the loading state of the [Fetch VSP Ticket Status](https://github.com/decred/decrediton/pull/3755)
+- [Remove revoke](https://github.com/decred/decrediton/pull/3754) tickets functionality. Now that revocations are created [automatically](https://proposals.decred.org/record/e2d7b7d) there is no need for any revoke ticket functionality.
+- 
 
 <a id="politeia" />
 
