--- a/journal/202205.md
+++ b/journal/202205.md
@@ -94,7 +94,7 @@ _Decrediton is a full-featured desktop wallet app with integrated voting, StakeS
 
 _Politeia is Decred's proposal system. It is used to request funding from the Decred treasury._
 
-{ _Check Check these repos:_
+{ _Check these repos:_
 
 - _. https://github.com/decred/politeia/commits/master ._
 - _. https://github.com/decred/politeiagui/commits/master ._
@@ -102,7 +102,13 @@ _Politeia is Decred's proposal system. It is used to request funding from the De
 
 }
 
-- {}
+- Trillian version [updated](https://github.com/decred/politeia/commit/69d4b661ed013c97a1b11950fb3ee28489be9085) to 1.4.1.
+- Comments [plugin function rewrote](https://github.com/decred/politeia/commit/3830b89f1547a30ab7c102b571e5db58ce1a64de) to fix bugs.
+- Plugin settings error messages [fixed.](https://github.com/decred/politeia/commit/2a356457d48749b4184dfd6a235e8d4659db7f7f)
+- Error check bug [fixed](https://github.com/decred/politeia/commit/cff2406b2a50d20d45b996995c523c40be925dd1) in politeiawww.
+- Fixed minimum proposal [start date bug](https://github.com/decred/politeia/commit/18491bc4c28463a5ba4da9f0028953ca1931135a).
+- Github actions [updated](https://github.com/decred/politeia/commit/af61db45ee9605e6d8646a0b53923a5ea4b6d939) in order to fix bugs/errors.
+- tlog client is [now a package](https://github.com/decred/politeia/commit/321813ea9009fa577392f97df523e50db51610fb) in politeiad.
 
 <a id="vspd" />
 
