--- a/journal/202205.md
+++ b/journal/202205.md
@@ -118,7 +118,8 @@ _vspd is server software for running a Voting Service Provider. A VSP votes on b
 
 { _Check https://github.com/decred/vspd/commits/master ._}
 
-- {}
+- Cleaned up use of [shutdown context](https://github.com/decred/vspd/commit/75026f5e91593123a8c0880546d2ce73eed005df).
+- 11 commits representing various code optimizations and refactoring.
 
 <a id="dcrstakepool" />
 
