--- a/journal/202205.md
+++ b/journal/202205.md
@@ -131,7 +131,7 @@ _dcrstakepool is server software for running a Voting Service Provider. This was
 
 { _Check https://github.com/decred/dcrstakepool/commits/master ._}
 
-- {}
+- Replaced 'addticket' with 'addtransaction' allowing for 'stakepoold' to [function](https://github.com/decred/dcrstakepool/commit/4c8a2c32098b5e8d01fb3dfce49c5aed9e5e46fb) when deploying dcrwallet v1.6.x 
 
 <a id="dcrlnd" />
 
