--- a/journal/202205.md
+++ b/journal/202205.md
@@ -55,20 +55,20 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 _dcrd is a full node implementation that powers Decred's peer-to-peer network around the world._
 
-{ _Check https://github.com/decred/dcrd/commits/master ._}
+[v1.7.2 patch](https://github.com/decred/dcrd/releases/tag/release-v1.7.2) has been released fixing a rare and hard to hit case when optional indexing is enabled.
 
 The general direction in May was to further leverage the consensus changes that activated recently, by adding optimizations and removing unneeded code.
 
-- Implemented header [proof storage](https://github.com/decred/dcrd/pull/2938) This modifies the chain logic to create and store the individual commitment hashes covered by the commitment root field of the header of each block, adds code to migrate the database to retroactively create and store entries for all applicable historical blocks, and updates the code that generates inclusion proofs to use the stored data instead so that it will continue to work properly when new header commitments are added without further modification. This change comes with a one-way database upgrade. { To have a more accessible description: 1. Overall is it like a disk cache to avoid recalculating "derivable" data (and boost performance)? 2. Is it correct that currently "individual commitment hashes" only includes 1 hash (for cfilters)? 3. Can we say it is an optimization made possible by the block header commitments consensus change? }
-- Header proof logic has been [consolidated](https://github.com/decred/dcrd/pull/2937), resulting in the p2p and rpcserver handlers no longer needing to understand anything about the proofs.
+- Implemented header [proof storage](https://github.com/decred/dcrd/pull/2938) This modifies the chain logic to create and store the individual commitment hashes covered by the commitment root field of the header of each block, adds code to migrate the database to retroactively create and store entries for all applicable historical blocks, and updates the code that generates inclusion proofs to use the stored data instead so that it will continue to work properly when new header commitments are added without further modification. This change comes with a one-way database upgrade.
+  - { _To have a more accessible description: 1. Overall is it like a disk cache to avoid recalculating "derivable" data (and boost performance)? 2. Is it correct that currently "individual commitment hashes" only includes 1 hash (for cfilters)? 3. Can we say it is an optimization made possible by the block header commitments consensus change?_ }
+- Header proof logic has been [consolidated](https://github.com/decred/dcrd/pull/2937), resulting in the p2p and rpcserver handlers no longer needing to understand anything about the proofs. { _maybe remove as minor_ }
 - Optimized [stake node pruning](https://github.com/decred/dcrd/pull/2943) by using block headers instead of checkpoints (reducing dependency on the latter). Header-based sync operations are more efficient and pave the way to multi-peer block downloads.
 - Reworked [old block rejection](https://github.com/decred/dcrd/pull/2945) logic to replace the use of checkpoints with the `assumevalid` block (hard-coded in each release). Semantics have been clarified to reflect that "checkpoints" are now only used for handling old forks and are no longer used for optimizations (that now rely on other methods). The `--nocheckpoints` CLI option has been replaced with `--allowoldforks`.
 - Added a function to make [basic transaction sanity](https://github.com/decred/dcrd/pull/2949) checks to the `blockchain/standalone` module, which is nice for consumers (e.g. DCRDEX) since this module has very few dependencies.
-- Removed the deprecated [address index](https://github.com/decred/dcrd/pull/2930) along with the associated CLI flags (`--addrindex` and `--dropaddrindex`) and `searchrawtransactions` JSON-RPC. { Is there more info on why it was deprecated and removed, and what replaces it? }
+- Removed the deprecated [address index](https://github.com/decred/dcrd/pull/2930) along with the associated CLI flags (`--addrindex` and `--dropaddrindex`) and `searchrawtransactions` JSON-RPC. { _Is there more info on why it was deprecated and removed, and what replaces it?_ }
 - Made [`blockchain`](https://github.com/decred/dcrd/pull/2952) package internal and not exported. This is part of a continuing overall effort to reduce the total number of exported packages and modules to reduce the maintenance burden, and eventually get to the point it will be possible to follow [semantic versioning](https://semver.org/) for the root module.
 - Continued [code](https://github.com/decred/dcrd/pull/2922) [cleanup](https://github.com/decred/dcrd/pull/2954) enabled by the recent consensus changes.
 - Retroactively fixed revocation [fee limit bug](https://github.com/decred/dcrd/pull/2948) that allowed one party to increase the fee paid to miners for another party in split transactions. This has never been exploited on `mainnet` and _can not_ be exploited since the automatic revocations agenda has activated.
-- 1.7 release [updated](https://github.com/decred/dcrd/pull/2935) to use the latest version of the 'blockchain' module and [bumped for 1.7.2](https://github.com/decred/dcrd/pull/2936).
 
 
 <a id="dcrwallet" />
