--- a/journal/202205.md
+++ b/journal/202205.md
@@ -12,9 +12,9 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 { _Month's highlights, no links here, 5-7 bullets max._
 
-- 
-- 
-- 
+- software releases
+- revoked old tickets
+- proposals
 - 
 - 
 
@@ -317,17 +317,23 @@ Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by th
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before Jun 1: Poolin 55%, ViaBTC 20%, F2Pool 8%, DsV1GF7 6.5%, BTC.com 6%, Luxor 4%, CoinMin2 0.2%, DsmLNFC 0.1%.
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) {_monthly zoom_} varied between {n}-{n} DCR, with 30-day [average](https://dcrstats.com/) at {n.n} DCR (+{n.n}). { use same t1-t2 for zoom }
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l2im68kw-l3x1522f&axis=time&visibility=true-true&mode=stepped) varied between 217-231 DCR, with 30-day [average](https://dcrstats.com/) at 223.6 DCR (+9.4).
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=block&axis=time) {_monthly zoom_} was {n.nn}-{n.nn} million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=block&axis=time) {_monthly zoom_} in Proof of Stake.
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l2im68kw-l3x1522f&scale=linear&bin=block&axis=time) was 8.78-9.07 million DCR, meaning that 62.6-63.9% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l2im68kw-l3x1522f&scale=linear&bin=block&axis=time) in Proof of Stake.
 
 { _Add a recap of ticket price action if it was interesting._ }
 
-**VSP**: On {date}, ~{n} (+{n}) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the {n} VSPs managed {n.n}% of the ticket pool (+{n.n}%).
+All old missed and expired tickets [have been revoked](https://github.com/decred/dcrd/pull/2861#issuecomment-1144049589), 1,719 in total! One of those was from block 767, when tickets were [quite expensive](https://forum.decred.org/threads/are-you-still-purchasing-at-current-price-4-55-dcr.840/) already.
 
-**Nodes**: Throughout May there were around {n} reachable nodes according to [PD Analytics](https://analytics.planetdecred.org/nodes).
+All new missed votes are revoked automatically, the first one going in block [657295](https://dcrdata.decred.org/block/657295).
 
-Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) ({n} total, dcrd only): { vX.Y.Z - n%, ... }
+**VSP**: On Jun 1, ~6,900 (+120) live tickets were managed by 16 [listed](https://decred.org/vsp/) vspd servers, or 16.8% of the ticket pool (+0.2%).
+
+Legacy (dcrstakepool) tickets can no longer be voted since May 8 when the chain forked to the new rules. Unlike all other shutdown/stalled legacy VSPs, the ones from coinmine.pl and decredbrasil.com have reported that they're on a current block height on Jun 1 and hold 19 live tickets in total. We are not sure how this is possible and are not counting these tickets in the reported stats.
+
+**Nodes**: Throughout May there were around ~185 reachable nodes according to [PD Analytics](https://analytics.planetdecred.org/nodes).
+
+Node versions as of Jun 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (160 total, dcrd only): v1.7.1 - 41%, v1.7.2 - 20%, v1.7.0 - 12%, v1.7.0 dev builds - 9%, v1.8.0 dev builds - 4%, v1.6.x - 6%, v1.5.x - 4%.
 
 { _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) {_monthly zoom_} varied between {n}-{n}K DCR.
 
