--- a/journal/202205.md
+++ b/journal/202205.md
@@ -167,7 +167,7 @@ _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swa
 
 { _Check https://github.com/planetdecred/dcrandroid/commits ._}
 
-- {}
+- App version [updated](https://github.com/planetdecred/dcrandroid/commit/99586aab6e8c1b199b0ea917ba6b3e3754d09651) to 1.7.0
 
 { _Also check the common wallet library and report its (notable) changes in the most relevant section (Android, iOS, or GoDCR): https://github.com/planetdecred/dcrlibwallet/commits/master ._}
 
