--- a/journal/202205.md
+++ b/journal/202205.md
@@ -77,7 +77,7 @@ The general direction in May was to further leverage the consensus changes that 
 
 { _Check https://github.com/decred/dcrwallet/commits/master ._}
 
-- [Prevented](https://github.com/decred/dcrwallet/commit/4ed5a4c677f9bdb1b8e70ceccf476fbff413cd79) panic in RPC-mode 'getstakeinfo' regarding expired tickets
+- [Prevented](https://github.com/decred/dcrwallet/commit/4ed5a4c677f9bdb1b8e70ceccf476fbff413cd79) panic in RPC-mode 'getstakeinfo' regarding expired tickets.
 - [Compatibility](https://github.com/decred/dcrwallet/commit/4c162c4f0db5550d1951a6db8a053b3482d2c3e9) related fixes related to the latest dcrd developments regarding mixed and expired tickets.
 - [Removed](https://github.com/decred/dcrwallet/commit/081e25d7c85e5f5b5d0125dc7527406e68c4390b) all ticket revoking functionality. Now that revocations are created [automatically](https://proposals.decred.org/record/e2d7b7d) there is no need for any revoke ticket functionality.
 - [Added](https://github.com/decred/dcrwallet/commit/049a5d1bef8308652af5e1a13794d113ff96a067) VSP host to the GetTicket response.
