added some reddit + Twitter posts

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -407,11 +407,14 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- {}
+- [Weekly Contribution Streaks](https://www.reddit.com/r/decred/comments/v0eus3/weekly_contribution_streaks_tards_unite/) by u/ersfbddfgwe
+- [Decred Mining Thread](https://www.reddit.com/r/decred/comments/unh7nn/decred_mining/) by u/Leftoverlose
+
 
 Selected Twitter discussions:
 
-- {}
+- Implementing SPV trading wallets for the DCRDEX. What it means and why Devs are focused on SPV](https://twitter.com/blockchainbuck/status/1531156971759575040?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1531156971759575040%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.redditmedia.com%2Fmediaembed%2Fv1n0xl%3Fresponsive%3Dtrueis_nightmode%3Dfalse) by @Buck
+- [Implementing a custom workflow for creating @ethereum ERC-20 wallets. What tokens should we do and why?](https://twitter.com/blockchainbuck/status/1527105720285552641?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1527105720285552641%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.redditmedia.com%2Fmediaembed%2Fut0898%3Fresponsive%3Dtrueis_nightmode%3Dfalse) by @Buck
 
 
 ## Markets
