--- a/journal/202205.md
+++ b/journal/202205.md
@@ -223,6 +223,8 @@ _dcrdocs is the source code for Decred [user documentation](https://docs.decred.
 
 { _Check https://github.com/decred/dcrdocs/commits/master ._}
 
+In Progress:
+
 - [Update docs](https://github.com/decred/dcrdocs/issues/1194) so infomation corresponds to the changes implemented in DCP0009 and DCP0010.
 
 <a id="dcrweb" />
