--- a/journal/202205.md
+++ b/journal/202205.md
@@ -235,15 +235,13 @@ _dcrweb is the source code for the decred.org website._
 
 { _Check https://github.com/decred/dcrweb/commits/master ._}
 
-- {}
+- [Removed defunct](https://github.com/decred/dcrweb/commit/72757a09f6530858306cbe964b7362159124ee18) exchanges.
+- Added [Consensus change](https://github.com/decred/dcrweb/commit/9563984b6e8f7ac4ea4c3fd7476a1182e7cc6758) press release.
+- [Updated chat room](https://github.com/decred/dcrweb/commit/1b238784db09c7991f0282344f52d87a9664847b) links.
 
-{ _Check for other new/updated repos in:_
+In Progress:
 
-- _. https://github.com/decred ._
-- _. https://github.com/planetdecred ._
-- _. https://github.com/raedahgroup ._
-
-}
+- [Add GoDCR](https://github.com/decred/dcrweb/pull/1044) to the wallets page.
 
 **Other**
 
