--- a/journal/202205.md
+++ b/journal/202205.md
@@ -158,7 +158,27 @@ _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swa
 
 { _Check https://github.com/decred/dcrdex/commits/master ._}
 
-- {}
+- eth: update solc and [abigen workflow](https://github.com/decred/dcrdex/commit/d637a13b6d0aad031751fddd5f3e9fc1fd0663d4) ?
+- Fixed Ethereum client [sync status](https://github.com/decred/dcrdex/commit/d5203b82a6f27fbae1cab7ef01d30c5ec1ac98fb).
+- Increased size of asset ID column in [markets table](https://github.com/decred/dcrdex/commit/bf32867113912c270a5fafc04570c88eee65e3ef).
+- Balance and spot updates are ignored [during login](https://github.com/decred/dcrdex/commit/d8a4d45a121516240b024fcd6169af27edf724d7).
+- https://github.com/decred/dcrdex/commit/d922a086b31c85c71e1cbc707bdc3b362ff4192a Not sure how to describe this one.
+- Encoding now allows for [data longer](https://github.com/decred/dcrdex/commit/b41da105df90e8d61f7371b330b53c8ef9e85d94) than 65535 bytes.  
+- [Build error](https://github.com/decred/dcrdex/commit/fcea466ead1906127ba82f00a97507b1afb08490) resolved.
+- Server Swap Transaction ID [added](https://github.com/decred/dcrdex/commit/b2ebd322c44465dc88979b382ec3ea26f2b07ba60) to log.
+- Updated BTC wallet now has a 'CoinSelectionStrategy' [argument](https://github.com/decred/dcrdex/commit/da4e76305a3ec4fc63aacdedd6e8c34e49a67bb2).
+- New [transaction syntax](https://github.com/decred/dcrdex/commit/7a2753444f8dbe0ea26d9c2748b7928bd0992f0b) for BTC client.
+- Added methods for [calculating the median fee](https://github.com/decred/dcrdex/commit/8f21170393772b0d32a4006a5cb376d56dd9ee2a) of the most recent block(s). Implement a cache to prevent repeated scans between blocks.
+- Server TLS [certificate change](https://github.com/decred/dcrdex/commit/30e29d7107ac19ee8b9da5b4c701a18940ad898d). (more details needed)
+- A button has been added to the wallets page allowing the [ability to recover](https://github.com/decred/dcrdex/commit/05276d70454a58bd14b126b35ffd8b45190000dd) the BTC SPV wallet. 
+- Added support for [Accelerating BTC transactions](https://github.com/decred/dcrdex/commit/b29acb674d7d568a934d56853bf8e32a34e746ab) using the 
+Child-Pays-For-Parent technique. On the UI, the orders page is updated with a button which shows up if the order is able to be accelerated. When clicking the button, a popup shows up which allows the user to accelerate an order.
+- Fixed restore dex [reconnect loop](https://github.com/decred/dcrdex/commit/1c0ff51ea972077882ffd401e662932652a44db1).
+- Added [custom address stringer](https://github.com/decred/dcrdex/commit/f3924b6b155658f2788737398bf79b899dc500d6).
+- Switched to Bitcoin Cash [testnet4](https://github.com/decred/dcrdex/commit/13ed847faf470cf2bfed895e02dc807d44cfc18f).
+- [ETH client](https://github.com/decred/dcrdex/commit/e912a086899eafcf1858c299e8ab6c6ddc43672a) gets receipt before checking status to prevent panics in tests.
+- Allow [harness testing](https://github.com/decred/dcrdex/commit/e500d1c4f886dc775a95896d28693a73956dbc15) on testnet for the ETH client.
+- Various bug fixes and other optimizations. 
 
 <a id="dcrandroid" />
 
