--- a/journal/202205.md
+++ b/journal/202205.md
@@ -59,8 +59,8 @@ _dcrd is a full node implementation that powers Decred's peer-to-peer network ar
 
 The general direction in May was to further leverage the consensus changes that activated recently, by adding optimizations and removing unneeded code.
 
-- Implemented header [proof storage](https://github.com/decred/dcrd/pull/2938) This modifies the chain logic to create and store the individual commitment hashes covered by the commitment root field of the header of each block, adds code to migrate the database to retroactively create and store entries for all applicable historical blocks, and updates the code that generates inclusion proofs to use the stored data instead so that it will continue to work properly when new header commitments are added without further modification. This change comes with a one-way database upgrade.
-  - { _To have a more accessible description: 1. Overall is it like a disk cache to avoid recalculating "derivable" data (and boost performance)? 2. Is it correct that currently "individual commitment hashes" only includes 1 hash (for cfilters)? 3. Can we say it is an optimization made possible by the block header commitments consensus change?_ }
+- Implemented header [proof storage](https://github.com/decred/dcrd/pull/2938). This modifies the chain logic to create and store the individual commitment hashes covered by the commitment root field of the header of each block, adds code to migrate the database to retroactively create and store entries for all applicable historical blocks, and updates the code that generates inclusion proofs to use the stored data instead so that it will continue to work properly when new header commitments are added without further modification. This change comes with a one-way database upgrade.
+  - { _To reword to an easier description: 1. Overall is it like a disk cache to avoid recalculating "derivable" data (and boost performance)? 2. Is it correct that currently "individual commitment hashes" only includes 1 hash (for cfilters)? 3. Can we say it is an optimization made possible by the block header commitments consensus change?_ }
 - Header proof logic has been [consolidated](https://github.com/decred/dcrd/pull/2937), resulting in the p2p and rpcserver handlers no longer needing to understand anything about the proofs. { _maybe remove as minor_ }
 - Optimized [stake node pruning](https://github.com/decred/dcrd/pull/2943) by using block headers instead of checkpoints (reducing dependency on the latter). Header-based sync operations are more efficient and pave the way to multi-peer block downloads.
 - Reworked [old block rejection](https://github.com/decred/dcrd/pull/2945) logic to replace the use of checkpoints with the `assumevalid` block (hard-coded in each release). Semantics have been clarified to reflect that "checkpoints" are now only used for handling old forks and are no longer used for optimizations (that now rely on other methods). The `--nocheckpoints` CLI option has been replaced with `--allowoldforks`.
@@ -70,21 +70,23 @@ The general direction in May was to further leverage the consensus changes that 
 - Continued [code](https://github.com/decred/dcrd/pull/2922) [cleanup](https://github.com/decred/dcrd/pull/2954) enabled by the recent consensus changes.
 - Retroactively fixed revocation [fee limit bug](https://github.com/decred/dcrd/pull/2948) that allowed one party to increase the fee paid to miners for another party in split transactions. This has never been exploited on `mainnet` and _can not_ be exploited since the automatic revocations agenda has activated.
 
-
 <a id="dcrwallet" />
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
 { _Check https://github.com/decred/dcrwallet/commits/master ._}
 
-- [Prevented](https://github.com/decred/dcrwallet/commit/4ed5a4c677f9bdb1b8e70ceccf476fbff413cd79) panic in RPC-mode 'getstakeinfo' regarding expired tickets.
-- [Compatibility](https://github.com/decred/dcrwallet/commit/4c162c4f0db5550d1951a6db8a053b3482d2c3e9) related fixes related to the latest dcrd developments regarding mixed and expired tickets.
-- [Removed](https://github.com/decred/dcrwallet/commit/081e25d7c85e5f5b5d0125dc7527406e68c4390b) all ticket revoking functionality. Now that revocations are created [automatically](https://proposals.decred.org/record/e2d7b7d) there is no need for any revoke ticket functionality.
-- [Added](https://github.com/decred/dcrwallet/commit/049a5d1bef8308652af5e1a13794d113ff96a067) VSP host to the GetTicket response.
-- [Moved](https://github.com/decred/dcrwallet/commit/85cea7dbc0911f692f502f793bd288ca4daceb80) sample config comments to their own lines.
-- [Fixed](https://github.com/decred/dcrwallet/commit/04d8d0f647533fec807797c7c37a09ef3d87e706) a script error.
-- [Updates](https://github.com/decred/dcrwallet/commit/07591d5ab129dec8705086262af98af659ea746a) to JSON-RPC methods.
-- [Corrected](https://github.com/decred/dcrwallet/commit/a5471829f05575530e5fbfdfb181ea9c1068ab7b) the main logic that verifies messages in JSON-RPC and gRPC.
+- [Fixed](https://github.com/decred/dcrwallet/pull/2164) an error in the `getstakeinfo` command (caused by changes regarding expired tickets).
+- [Compatibility](https://github.com/decred/dcrwallet/pull/2158) updates to the latest dcrd changes regarding missed and expired tickets.
+- [Fixed](https://github.com/decred/dcrwallet/pull/2147) a script error. { minor }
+
+Released with the v1.7.2 patch:
+
+- [Removed](https://github.com/decred/dcrwallet/pull/2153) all ticket revoking functionality. Now that revocations are created [automatically](https://proposals.decred.org/record/e2d7b7d) there is no need for wallets to handle it.
+- [Added](https://github.com/decred/dcrwallet/pull/2146) VSP host to the returned ticket information, enabling wallet apps to know which VSP the ticket is managed by.
+- [Moved](https://github.com/decred/dcrwallet/pull/2141) sample config comments to their own lines. { minor }
+- [Added](https://github.com/decred/dcrwallet/pull/2148) `walletpubpassphrasechange` to JSON-RPC methods. It allows to change wallet's public passphrase.
+- [Fixed](https://github.com/decred/dcrwallet/pull/2150) verification of signed messages.
 
 <a id="decrediton" />
 
