--- a/journal/202205.md
+++ b/journal/202205.md
@@ -94,16 +94,18 @@ _Decrediton is a full-featured desktop wallet app with integrated voting, StakeS
 
 { _Check https://github.com/decred/decrediton/commits/master ._}
 
-- Electron (The framework Decredtion is built on) has been [bumped to v17.4.2.](https://github.com/decred/decrediton/pull/3765) This fixes an issue that caused dcrwallet/dcrd to not be able to be launch on macOS 10.15 (Catalina)
-- Fixes made to info [modal columns](https://github.com/decred/decrediton/pull/3767) and justification. The privacy tab now displays "Stakeshuffle++" inside of "Coin Mixer".
-- The Decred Stakeshuffle++ mixing server now uses [constants](https://github.com/decred/decrediton/pull/3768) instead of magics.
-- Ticket History [QR Code](https://github.com/decred/decrediton/pull/3764) button fixed.
-- Fixes to [1.7.2 UI issues](https://github.com/decred/decrediton/pull/3760) - A typo in the Staking infographic has been fixed, and Vote Transaction Agenda Choice colors will no longer move when user scrolls.
-- Fixed the [loading more](https://github.com/decred/decrediton/pull/3756) tickets issue.
-- Improved the loading state of the [Fetch VSP Ticket Status](https://github.com/decred/decrediton/pull/3755)
-- [Remove revoke](https://github.com/decred/decrediton/pull/3754) tickets functionality. Now that revocations are created [automatically](https://proposals.decred.org/record/e2d7b7d) there is no need for any revoke ticket functionality.
+- Electron (The framework Decredtion is built on) has been [bumped to v17.4.2](https://github.com/decred/decrediton/pull/3765) to fix an issue that prevented dcrwallet/dcrd from launching on macOS 10.15 (Catalina).
+- Fixes made to info [modal columns](https://github.com/decred/decrediton/pull/3767) and justification. The privacy tab now displays "Stakeshuffle++" inside of "Coin Mixer". { minor -> fixes }
+- The Decred Stakeshuffle++ mixing server now uses [constants](https://github.com/decred/decrediton/pull/3768) instead of magics. { minor -> improvements }
+- Ticket History [QR Code](https://github.com/decred/decrediton/pull/3764) button fixed. { minor -> fixes }
+- Fixes to [1.7.2 UI issues](https://github.com/decred/decrediton/pull/3760) - A typo in the Staking infographic has been fixed, and Vote Transaction Agenda Choice colors will no longer move when user scrolls. { minor -> fixes }
+- Fixed the [loading more](https://github.com/decred/decrediton/pull/3756) tickets issue. { minor -> fixes }
+- Improved the loading state of the [Fetch VSP Ticket Status](https://github.com/decred/decrediton/pull/3755) { minor -> fixes }
+- [Removed revoke](https://github.com/decred/decrediton/pull/3754) tickets functionality. Now that revocations are created [automatically](https://proposals.decred.org/record/e2d7b7d) there is no need for wallets to handle it.
 - Improvements made to [Ticket Status and Ticket History views](https://github.com/decred/decrediton/pull/3751). Now the tabs remember their scroll positions after coming back from the transaction details page. Rows are loaded gradually using the infinite scroll functionality. 
-- Users can now choose to display the [VSP fee transaction hash and fee status](https://github.com/decred/decrediton/pull/3752) in transaction details. If the received fee transaction is in confirmed status for an unspent ticket but the dcrwallet thinks it's not yet confirmed, the app processes and updates the status in the background.
+- Users can now fetch the [VSP fee transaction hash and fee status](https://github.com/decred/decrediton/pull/3752) in transaction details. If the received fee transaction is in confirmed status for an unspent ticket but the dcrwallet thinks it's not yet confirmed, the app processes and updates the status in the background.
+
+{ image candidates: 3752 }
 
 <a id="politeia" />
 
