Dev Politeia fixes 1
- Use PR links.
- Tweak wording.
- Mark removal candidates.

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -108,13 +108,15 @@ Merged and released in May's v1.7.2 and v1.7.3 patches:
 
 _Politeia is Decred's proposal system. It is used to request funding from the Decred treasury._
 
-- Trillian version [updated](https://github.com/decred/politeia/commit/69d4b661ed013c97a1b11950fb3ee28489be9085) to 1.4.1.
-- Comments [plugin function rewrote](https://github.com/decred/politeia/commit/3830b89f1547a30ab7c102b571e5db58ce1a64de) to fix bugs.
-- Plugin settings error messages [fixed.](https://github.com/decred/politeia/commit/2a356457d48749b4184dfd6a235e8d4659db7f7f)
-- Error check bug [fixed](https://github.com/decred/politeia/commit/cff2406b2a50d20d45b996995c523c40be925dd1) in politeiawww.
-- Fixed minimum proposal [start date bug](https://github.com/decred/politeia/commit/18491bc4c28463a5ba4da9f0028953ca1931135a).
-- Github actions [updated](https://github.com/decred/politeia/commit/af61db45ee9605e6d8646a0b53923a5ea4b6d939) in order to fix bugs/errors.
-- tlog client is [now a package](https://github.com/decred/politeia/commit/321813ea9009fa577392f97df523e50db51610fb) in politeiad.
+Backend changes:
+
+- Trillian version [updated](https://github.com/decred/politeia/pull/1642) to 1.4.1.
+- Comments plugin [fsck function rewritten](https://github.com/decred/politeia/pull/1641) to fix several bugs.
+- Fixed plugin settings [error messages](https://github.com/decred/politeia/pull/1640) related to start and end dates.
+- Fixed [CSRF error check](https://github.com/decred/politeia/pull/1638).
+- Fixed minimum proposal [start date bug](https://github.com/decred/politeia/pull/1637).
+- Github actions [updated](https://github.com/decred/politeia/pull/1639) in order to fix bugs/errors. { minor, remove }
+- tlog client now has [its own package](https://github.com/decred/politeia/pull/1636) in politeiad (required for [importing](https://github.com/decred/politeia/pull/1632) legacy proposals).
 
 <a id="vspd" />
 
