Dev DCRDEX excitify descriptions, mark removals
- Replace commit links with PR links.
- Rework some descriptions to be more accessible.
- Mark candidates for removal in future commits.
- Highlight the skill behind 1530.
- Mentions devs' contribs to upstream repos.

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -148,27 +148,32 @@ _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swa
 
 { _Check https://github.com/decred/dcrdex/commits/master ._}
 
-- eth: update solc and [abigen workflow](https://github.com/decred/dcrdex/commit/d637a13b6d0aad031751fddd5f3e9fc1fd0663d4) ?
-- Fixed Ethereum client [sync status](https://github.com/decred/dcrdex/commit/d5203b82a6f27fbae1cab7ef01d30c5ec1ac98fb).
-- Increased size of asset ID column in [markets table](https://github.com/decred/dcrdex/commit/bf32867113912c270a5fafc04570c88eee65e3ef).
-- Balance and spot updates are ignored [during login](https://github.com/decred/dcrdex/commit/d8a4d45a121516240b024fcd6169af27edf724d7).
-- https://github.com/decred/dcrdex/commit/d922a086b31c85c71e1cbc707bdc3b362ff4192a Not sure how to describe this one.
-- Encoding now allows for [data longer](https://github.com/decred/dcrdex/commit/b41da105df90e8d61f7371b330b53c8ef9e85d94) than 65535 bytes.  
-- [Build error](https://github.com/decred/dcrdex/commit/fcea466ead1906127ba82f00a97507b1afb08490) resolved.
+- eth: update solc and [abigen workflow](https://github.com/decred/dcrdex/pull/1626) { minor, merge into dependency updates }
+- Fixed Ethereum client [sync status](https://github.com/decred/dcrdex/pull/1630). { minor, merge into fixes }
+- Increased size of asset ID column in [markets table](https://github.com/decred/dcrdex/pull/1621). { minor, merge into refactoring }
+- Balance and spot updates are ignored [during login](https://github.com/decred/dcrdex/pull/1624). { minor, merge into fixes }
+- Generic [wait and retry function](https://github.com/decred/dcrdex/pull/1623) reworked to gradually "taper off" (slow down) after a few initial frequent attempts.
+- Encoding now allows for transaction [data longer](https://github.com/decred/dcrdex/pull/1620) than 65,535 bytes.
+- Dependency updates to build with [Node 18](https://github.com/decred/dcrdex/pull/1617).
 - Server Swap Transaction ID [added](https://github.com/decred/dcrdex/commit/b2ebd322c44465dc88979b382ec3ea26f2b07ba60) to log.
-- Updated BTC wallet now has a 'CoinSelectionStrategy' [argument](https://github.com/decred/dcrdex/commit/da4e76305a3ec4fc63aacdedd6e8c34e49a67bb2).
-- New [transaction syntax](https://github.com/decred/dcrdex/commit/7a2753444f8dbe0ea26d9c2748b7928bd0992f0b) for BTC client.
-- Added methods for [calculating the median fee](https://github.com/decred/dcrdex/commit/8f21170393772b0d32a4006a5cb376d56dd9ee2a) of the most recent block(s). Implement a cache to prevent repeated scans between blocks.
-- Server TLS [certificate change](https://github.com/decred/dcrdex/commit/30e29d7107ac19ee8b9da5b4c701a18940ad898d). (more details needed)
-- A button has been added to the wallets page allowing the [ability to recover](https://github.com/decred/dcrdex/commit/05276d70454a58bd14b126b35ffd8b45190000dd) the BTC SPV wallet. 
-- Added support for [Accelerating BTC transactions](https://github.com/decred/dcrdex/commit/b29acb674d7d568a934d56853bf8e32a34e746ab) using the 
-Child-Pays-For-Parent technique. On the UI, the orders page is updated with a button which shows up if the order is able to be accelerated. When clicking the button, a popup shows up which allows the user to accelerate an order.
-- Fixed restore dex [reconnect loop](https://github.com/decred/dcrdex/commit/1c0ff51ea972077882ffd401e662932652a44db1).
-- Added [custom address stringer](https://github.com/decred/dcrdex/commit/f3924b6b155658f2788737398bf79b899dc500d6).
-- Switched to Bitcoin Cash [testnet4](https://github.com/decred/dcrdex/commit/13ed847faf470cf2bfed895e02dc807d44cfc18f).
-- [ETH client](https://github.com/decred/dcrdex/commit/e912a086899eafcf1858c299e8ab6c6ddc43672a) gets receipt before checking status to prevent panics in tests.
-- Allow [harness testing](https://github.com/decred/dcrdex/commit/e500d1c4f886dc775a95896d28693a73956dbc15) on testnet for the ETH client.
-- Various bug fixes and other optimizations. 
+- Updated BTC wallet now has a 'CoinSelectionStrategy' [argument](https://github.com/decred/dcrdex/commit/da4e76305a3ec4fc63aacdedd6e8c34e49a67bb2). { part of 1542, remove }
+- New [transaction syntax](https://github.com/decred/dcrdex/commit/7a2753444f8dbe0ea26d9c2748b7928bd0992f0b) for BTC client. { part of 1542, remove }
+- Updates to newer modules from [btcsuite and go-ethereum](https://github.com/decred/dcrdex/pull/1542).
+- Added methods for [calculating the median fee](https://github.com/decred/dcrdex/pull/1597) of the most recent block(s) in BTC/DOGE/LTC/BCH. Implemented a cache to prevent repeated scans between blocks, and a fallback if there is not enough data to estimate the fee.
+- Support updating server's [TLS certificate](https://github.com/decred/dcrdex/pull/1602) with one supplied by the user.
+- A button has been added to the Wallets page to [recreate the BTC SPV wallet](https://github.com/decred/dcrdex/pull/1507), as there are still many ways how it could get [corrupted](https://github.com/decred/dcrdex/issues/1438).
+- Added support for [accelerating BTC transactions](https://github.com/decred/dcrdex/pull/1555) using the [Child Pays For Parent](https://bitcoinops.org/en/topics/cpfp/) fee bumping technique. Orders page will show a button if the order is able to be accelerated. When clicking the button, a popup shows up which allows the user to choose a higher fee.
+- Fixed restore dex [reconnect loop](https://github.com/decred/dcrdex/pull/1616). { minor, merge in fixes }
+- Switched to Bitcoin Cash [testnet4](https://github.com/decred/dcrdex/pull/1606) now that it is first class in bchd. Also, added a custom encoder for BCH's [CashAddr](https://www.reference.cash/protocol/blockchain/encoding/cashaddr/) addresses.
+- Implemented [stage 3](https://github.com/decred/dcrdex/pull/1530) of the signature message truncation fix. It is tricky to fix a bug when it is "deployed" on many co-dependent servers and clients, but the devs have an elaborate [4-stage plan](https://github.com/decred/dcrdex/pull/1526) for it.
+- Simnet harness tests [generalized](https://github.com/decred/dcrdex/pull/1603) to work with all currently supported assets.
+- [ETH client](https://github.com/decred/dcrdex/pull/1599) gets receipt before checking status to prevent panics in tests. { minor, merge }
+- Allow [harness testing](https://github.com/decred/dcrdex/pull/1550) on testnet for the ETH client.
+- Various bug fixes and other optimizations.
+
+While working on DCRDEX the developers have made various contributions to upstream projects: [btcd](https://github.com/btcsuite/btcd/commits?author=chappjc), [btcwallet](https://github.com/btcsuite/btcwallet/commits?author=chappjc), [go-ethereum](https://github.com/ethereum/go-ethereum/pull/24533), [neutrino](https://github.com/lightninglabs/neutrino/commits?author=chappjc), [zcash](https://github.com/zcash/zcash/commits?author=buck54321), and others.
+
+{ image candidates: 1555! }
 
 <a id="dcrandroid" />
 
