Dev cover dcrlnlpd, dcrseeder, plus a few bits

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -108,7 +108,7 @@ Backend changes:
 - Fixed minimum proposal [start date bug](https://github.com/decred/politeia/pull/1637).
 - Fixed [CSRF error check](https://github.com/decred/politeia/pull/1638).
 - Fixed plugin settings [error messages](https://github.com/decred/politeia/pull/1640) related to start and end dates.
-- Comments plugin [fsck function rewritten](https://github.com/decred/politeia/pull/1641) to fix several bugs.
+- Comments plugin [fsck function rewritten](https://github.com/decred/politeia/pull/1641) to fix several bugs. "fsck" is short for "file system check" and is responsible for verifying data integrity and rebuilding the caches.
 
 GUI changes:
 
@@ -116,9 +116,9 @@ GUI changes:
 - Reimplemented home page [Sidebar](https://github.com/decred/politeiagui/pull/2764), [External Link](https://github.com/decred/politeiagui/pull/2768) modal, and [Navbar](https://github.com/decred/politeiagui/pull/2763) in the new GUI [plugin architecture](https://github.com/decred/politeiagui/tree/master/plugins-structure#politeiagui---plugins-structure).
 - Fixed several bugs related to [proposal start/end dates](https://github.com/decred/politeiagui/pull/2771).
 
-pi-ui library changes:
+Changes in the pi-ui library (common UI elements for Politeia and Decrediton):
 
-- Support [keyboard navigation](https://github.com/decred/pi-ui/pull/446) in the `DatePicker`.
+- Support [keyboard navigation](https://github.com/decred/pi-ui/pull/446) in the `DatePicker` widget.
 - Added [info icon](https://github.com/decred/pi-ui/pull/447) with a tooltip to the text input field.
 
 { image candidates: not seeing any }
@@ -130,6 +130,20 @@ pi-ui library changes:
 _vspd is server software for running a Voting Service Provider. A VSP votes on behalf of its users 24/7 and cannot steal funds._
 
 - 12 commits representing various code optimizations and refactoring.
+
+<a id="dcrlnlpd" />
+
+**[dcrlnlpd](https://github.com/decred/dcrlnlpd)**
+
+_dcrlnlpd stands for "DCR LN Liquidity Provider Daemon"._
+
+Meet the the new project in Decred's LN ecosystem:
+
+> This service allows running a Lightning Network Liquidity Provider in the Decred network.
+> 
+> This LP allows remote clients to request the node associated to the LP to open an LN channel back to the requesting client. This allows the requesting client to have some inbound bandwidth to receive LN payments.
+> 
+> To create the channel, the LP charges some amount, specified as a percentage of the desired channel size. \[[README file](https://github.com/decred/dcrlnlpd/blob/941743f09e2d01d5bae36b492de38e49c9565510/README.md)\]
 
 <a id="dcrdex" />
 
@@ -214,7 +228,8 @@ _dcrweb is the source code for the decred.org website._
 
 **Other**
 
-- Check @buck54321's [gentle intro](https://twitter.com/blockchainbuck/status/1531156971759575040) into the "right" way to build light wallets with BIP-157/158.
+- dcrseeder: DNS seeding was finally [removed](https://github.com/decred/dcrseeder/pull/50), it also got a small fix to [prune dead peers](https://github.com/decred/dcrseeder/pull/47) more aggressively.
+- @buck54321 posted a [gentle intro](https://twitter.com/blockchainbuck/status/1531156971759575040) into BIP-157/158 tech, why it is the right way to build light wallets and why DCRDEX team is focusing on it.
 
 
 ## People
