People clean up a bit

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -234,17 +234,9 @@ _dcrweb is the source code for the decred.org website._
 
 ## People
 
-{ _List people who got their first non-trivial commits merged in master branches, in alphabetical order._ }
-
 Welcome to new first-time contributors with code merged to master: {@handle} ([{repo}]({link to user's commits})), ... !
 
-{ _Check CMS, remove if none._ }
-
-Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}).
-
-{ _Welcome new corporate contractors with short intros._ }
-
-{ _Status updates from existing contractors._ }
+{ ^ There are a few new contributors from Jan-Mar when we didn't release DJ. I think about greeting them here. }
 
 { _Interviews with contributors. Link to #media for generic references (e.g. "Check the 3 interviews with devs") or link directly when referencing a specific interview._ }
 
