--- a/journal/202205.md
+++ b/journal/202205.md
@@ -254,17 +254,15 @@ See [June 2022](https://decredcommunity.github.io/social-media-stats/posts/20220
 
 ## Governance
 
-{ _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
-
 In May the new [treasury](https://dcrdata.decred.org/treasury) received 9,407 DCR worth $390K at month's average rate of $41.46. 2,950 DCR was spent from the legacy treasury to pay contractors, worth $122K at May's rate, or $179K at April's billing rate of $60.62. These payments were to cover both March and April's contractor invoices. 
 
 As of June 12, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 795,673 DCR ($23.9 million USD at $30.09).
 
-A new [proposal](https://proposals.decred.org/record/0ef42e5) was submitted by Raedah Group to fund GoDCR, the Golang Desktop wallet which will also be serving the purpose of a mobile wallet as development continues. This proposal requests $300K for 12 months of funding, a greater amount than the [previous proposal](https://proposals.decred.org/record/f7d9fc8) which was narrowly rejected in October 2021, with the extra budget being due to larger number of workers and a longer duration.
+A new [proposal](https://proposals.decred.org/record/0ef42e5) was submitted by Raedah Group to fund GoDCR, the Golang desktop GUI wallet which will also be serving the purpose of a mobile wallet as development continues. This proposal requests $300K for 12 months of funding, a greater amount than the [previous proposal](https://proposals.decred.org/record/f7d9fc8) which was narrowly rejected in October 2021, with the extra budget being due to larger number of workers, a longer duration and covering the maintenance of existing Android/iOS wallets.
 
 Voting was held for four proposals, three of which were approved and one failed to reach the quorum requirement.
 
-The [proposal](https://proposals.decred.org/record/4fdef29) to fund Decred Journal and Politeia Digest was approved with 99% Yes votes and turnout of 56%.
+The [proposal](https://proposals.decred.org/record/4fdef29) to fund Decred Journal and Politeia Digest was approved with 99% Yes votes and turnout of 56%. A detailed report on the 2021 proposal's deliverables and finances was published [here](https://github.com/decredcommunity/proposals/blob/master/proposals/1d74b88/updates/20220521.md).
 
 The [proposal](https://proposals.decred.org/record/7057e0b) to fund Decred content and asset translations was approved with 99% Yes votes and turnout of 56%.
 
@@ -272,15 +270,7 @@ The [proposal](https://proposals.decred.org/record/da2f32d) to fund continuation
 
 The [proposal](https://proposals.decred.org/record/6bdffcb) to fund University events in Uganda was rejected with 47% Yes votes and turnout of 6%.
 
-{ _Report any other activity with the legacy or new treasury._ }
-
-{ _High-level recap of decision-making activity and most important events._ }
-
-- {}
-
-{ _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
-
-See Politeia Digest [issue {}]({}) and [issue {}]({}) for more details on the month's proposals.
+See Politeia Digest [issue 51](https://blockcommons.red/politeia-digest/issue051/).
 
 
 ## Network
