--- a/journal/202205.md
+++ b/journal/202205.md
@@ -277,6 +277,8 @@ See Politeia Digest [issue 51](https://blockcommons.red/politeia-digest/issue051
 
 **Hashrate**: May's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l2im68kw-l3x1522f&bin=block&axis=time) opened at ~345 Ph/s and closed ~115 Ph/s, bottoming at 74 Ph/s and peaking at 381 Ph/s throughout the month.
 
+{ hashrate chart is a must this month }
+
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jun 1: Poolin 55%, ViaBTC 21%, F2Pool 7%, AntPool 7%, Luxor 5%, BTC.com 4%, CoinMine 0.3%.
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before Jun 1: Poolin 55%, ViaBTC 20%, F2Pool 8%, DsV1GF7 6.5%, BTC.com 6%, Luxor 4%, CoinMin2 0.2%, DsmLNFC 0.1%.
@@ -306,9 +308,7 @@ Node versions as of Jun 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (1
 
 ## Ecosystem
 
-{ _Hint: "Ecosystem" is about new units of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors, investors. It is more about user-facing services, businesses, and wider adoption, while Network is more about the backbone. Use bullets or paragraphs, whatever looks best._ }
-
-- [big.decred.energy VSP](https://github.com/decred/dcrwebapi/commit/8ce29ea43db6922c9cd9e778365acb3b307ced85) from [@DCR_Uncle](https://twitter.com/DCR_Uncle) is now available on the VSP list with a 1% fee.
+- [big.decred.energy VSP](https://github.com/decred/dcrwebapi/pull/161) from [@DCR_Uncle](https://twitter.com/DCR_Uncle) is now [available](https://twitter.com/DCR_Uncle/status/1527138204175847424) on the VSP list with a 1% fee.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -351,6 +351,7 @@ Secured the following news articles:
 { _Put notable community content efforts or new projects at the beginning. e.g. a new website, new podcast series, or an important guide how to make the network more robust._ }
 
 - Decred Magazine https://twitter.com/DecredSociety/status/1530562659006939136
+- @DCR\_Uncle shared his guide for running Decred LN nodes https://twitter.com/DCR_Uncle/status/1527329143402029071
 
 { _Hint: For bullet lists below, use the following format: [Sentence case title]({link}) by @author - optional comment._ }
 
