--- a/journal/202205.md
+++ b/journal/202205.md
@@ -315,19 +315,17 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Outreach
 
-{ _Summarize outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending our message out". Here is the "big picture" stuff while Events and Media go into the details._ }
+Monde PR's achievements:
 
-Monde PR’s achievements: 
-
-- Pitched two news updates to crypto and finance media
-- Pitched one newsjack 
-- Responded to three requests for comments
-- Secured two media interviews
+- Pitched 2 news updates to crypto and finance media.
+- Pitched 1 newsjack.
+- Responded to 3 requests for comments.
+- Secured 2 media interviews.
 
 Secured the following news articles:
 
-- Decred’s shift to a majority PoS consensus model was covered by [Invezz](https://invezz.com/news/2022/05/09/decred-shifts-to-majority-proof-of-stake-consensus-model/), featuring commentary from @jy-p. Invezz posted the story in nine other languages including [French](https://invezz.com/fr/actualites/2022/05/09/decred-passe-au-modele-de-consensus-majoritaire-proof-of-stake/) and [Italian](https://invezz.com/it/notizie/2022/05/10/decred-passa-al-modello-proof-of-stake/). The story was syndicated to four publications including [Bitcoin Insider](https://www.bitcoininsider.org/article/164786/decred-shifts-majority-proof-stake-consensus-model) and [Crypto News](https://cryptonews.net/news/altcoins/6288659/). 
-- The GoDCR release was covered by [CryptoNinjas](https://www.cryptoninjas.net/2022/05/23/decred-blockchain-introduces-new-cross-chain-spv-based-wallet-godcr/) and [E-Crypto News](https://e-cryptonews.com/decred-launches-godcr-wallet-with-enhanced-privacy-features/). The CryptoNinjas article was syndicated to three publications including [BitcoinEthereumNews](https://bitcoinethereumnews.com/blockchain/decred-blockchain-introduces-new-cross-chain-spv-based-wallet-godcr-cryptoninjas/) and [Global Online Money](https://globalonlinemony.com/decred-blockchain-introduces-new-cross-chain-spv-based-wallet-godcr-cryptoninjas/). 
+- Decred's shift to a majority PoS consensus model was covered by [Invezz](https://invezz.com/news/2022/05/09/decred-shifts-to-majority-proof-of-stake-consensus-model/), featuring commentary from @jy-p. Invezz posted the story in 9 other languages including [French](https://invezz.com/fr/actualites/2022/05/09/decred-passe-au-modele-de-consensus-majoritaire-proof-of-stake/) and [Italian](https://invezz.com/it/notizie/2022/05/10/decred-passa-al-modello-proof-of-stake/). The story was syndicated to 4 publications including [Bitcoin Insider](https://www.bitcoininsider.org/article/164786/decred-shifts-majority-proof-stake-consensus-model) and [Crypto News](https://cryptonews.net/news/altcoins/6288659/).
+- The GoDCR release was covered by [CryptoNinjas](https://www.cryptoninjas.net/2022/05/23/decred-blockchain-introduces-new-cross-chain-spv-based-wallet-godcr/) and [E-Crypto News](https://e-cryptonews.com/decred-launches-godcr-wallet-with-enhanced-privacy-features/). The CryptoNinjas article was syndicated to 3 publications including [BitcoinEthereumNews](https://bitcoinethereumnews.com/blockchain/decred-blockchain-introduces-new-cross-chain-spv-based-wallet-godcr-cryptoninjas/) and [Global Online Money](https://globalonlinemony.com/decred-blockchain-introduces-new-cross-chain-spv-based-wallet-godcr-cryptoninjas/).
 
 
 ## Events
